# BANG-Billion-Scale-ANN

./: Makefile  README.md
BANG_Base/: BANG_RAPIDS.cmake  CMakeLists.txt  Makefile  bang.h  bang_preprocess.py  bang_search.cu  bang_search.cuh  main.cu  parANN.cu  parANN.h  test_driver.cpp
BANG_Base/utils/: timer.h  utils.h
BANG_Exactdistance/: Makefile  README.md  compile.sh  parANN.cu  parANN.h  sift100m64.sh
BANG_Exactdistance/code/: parANN_skeleton.h
BANG_Inmemory/: parANN.cu  parANN.h
BANG_Inmemory/utils/: index_to_binary_graph.py
